<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:padding="24dp">

    <!-- Title: Admin Profil -->
    <TextView
        android:id="@+id/adminTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_profil"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/adminImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/admin_image"
        android:padding="8dp"
        android:src="@drawable/admin_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminTitle" />

    <!-- Admin Name -->
    <TextView
        android:id="@+id/adminName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ini_nama_admin"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/adminImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/adminImage"
        app:layout_constraintTop_toBottomOf="@+id/adminTitle" />

    <!-- Settings Option -->
    <LinearLayout
        android:id="@+id/settingsOption"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminImage"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/logo_setting"
            android:src="@drawable/setting_admin"
            app:tint="#FFC107" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Logout Option -->
    <LinearLayout
        android:id="@+id/logoutOption"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsOption"
        tools:ignore="MissingConstraints,UseCompoundDrawables">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/logo_logout"
            android:src="@drawable/logout_admin"
            app:tint="#FFC107" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
